--- a/pom.xml
+++ b/pom.xml
@@ -88,13 +88,19 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13</version>
+            <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20190722</version>
+        </dependency>
+        <dependency>
+            <groupId>com.contentstack.sdk</groupId>
+            <artifactId>java</artifactId>
+            <version>1.5.3</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
