--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.contentstack.sdk</groupId>
     <artifactId>java</artifactId>
-    <version>1.5.4</version>
+    <version>1.5.5</version>
     <packaging>jar</packaging>
-
     <name>contentstack-java</name>
     <description>Java SDK for Contentstack Content Delivery API, Contentstack is a headless CMS with an API-first approach
     </description>
@@ -96,12 +95,19 @@
             <artifactId>json</artifactId>
             <version>20190722</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>com.contentstack.sdk</groupId>-->
-<!--            <artifactId>java</artifactId>-->
-<!--            <version>1.5.3</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.13.2</version>
+        </dependency>
+
     </dependencies>
 
 
@@ -111,10 +117,8 @@
             <!--
             # Run tests and generate .xml reports
             mvn test
-
             # Convert .xml reports into .html report, but without the CSS or images
             mvn surefire-report:report-only
-
             # Put the CSS and images where they need to be without the rest of the
             # time-consuming stuff
             mvn surefire-report:report site -DgenerateReports=false
@@ -165,7 +169,7 @@
                         </goals>
                         <configuration>
                             <additionalOptions>-Xdoclint:none</additionalOptions>
-<!--                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>-->
+                            <!--                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>-->
                             <use>false</use>
                             <use>false</use>
                             <source>1.8</source>
@@ -187,18 +191,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.3</version>
-<!--                <configuration>-->
-<!--                    <reportPlugins>-->
-<!--                        <plugin>-->
-<!--                            <groupId>org.apache.maven.plugins</groupId>-->
-<!--                            <artifactId>maven-javadoc-plugin</artifactId>-->
-<!--                            <configuration>-->
-<!--                                &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
-<!--                                <additionalparam>${javadoc.opts}</additionalparam>-->
-<!--                            </configuration>-->
-<!--                        </plugin>-->
-<!--                    </reportPlugins>-->
-<!--                </configuration>-->
+                <!--                <configuration>-->
+                <!--                    <reportPlugins>-->
+                <!--                        <plugin>-->
+                <!--                            <groupId>org.apache.maven.plugins</groupId>-->
+                <!--                            <artifactId>maven-javadoc-plugin</artifactId>-->
+                <!--                            <configuration>-->
+                <!--                                &lt;!&ndash;suppress UnresolvedMavenProperty &ndash;&gt;-->
+                <!--                                <additionalparam>${javadoc.opts}</additionalparam>-->
+                <!--                            </configuration>-->
+                <!--                        </plugin>-->
+                <!--                    </reportPlugins>-->
+                <!--                </configuration>-->
             </plugin>
 
             <!--
