--- a/pom.xml
+++ b/pom.xml
@@ -82,17 +82,26 @@
 
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.contentstack.sdk</groupId>
+            <artifactId>utils</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>io.github.cdimascio</groupId>
             <artifactId>java-dotenv</artifactId>
             <version>5.2.2</version>
         </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
@@ -116,7 +125,6 @@
 
     <build>
         <plugins>
-
             <!--
             # Run tests and generate .xml reports
             mvn test
@@ -126,7 +134,6 @@
             # time-consuming stuff
             mvn surefire-report:report site -DgenerateReports=false
             -->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
@@ -140,11 +147,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!--
-            The Source Plugin creates a jar archive of the source files of
-            the current project. The jar file is, by default, created in the project's target directory.
-            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -158,8 +160,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!--The Javadoc Plugin uses the Javadoc tool to generate javadocs for the specified project-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -184,11 +184,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-            <!--
-            The Site Plugin is used to generate a site for the project.
-            The generated site also includes the project's reports that were configured in the POM.
-            -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
@@ -214,7 +209,6 @@
                     </execution>
                 </executions>
             </plugin>
-
             <!--
             Sometimes when you may need to compile a certain project to a different
             version than what you are currently using. The javac can accept such command
@@ -232,10 +226,7 @@
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
                 </configuration>
-
             </plugin>
-
-            <!--Provides support to access staging functionality in a remote Nexus Professional server.-->
             <plugin>
                 <groupId>org.sonatype.plugins</groupId>
                 <artifactId>nexus-staging-maven-plugin</artifactId>
@@ -247,7 +238,6 @@
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
             </plugin>
-
             <!--
             This plugin is used to release a project with Maven, saving a lot of repetitive, manual work.
             Releasing a project is made in two steps: prepare and perform.
@@ -263,8 +253,6 @@
                     <goals>deploy</goals>
                 </configuration>
             </plugin>
-
-
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -281,7 +269,6 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
-
                     </execution>
                 </executions>
             </plugin>
