--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         <nexus-staging-maven-plugin.version>1.6.7</nexus-staging-maven-plugin.version>
         <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
         <json-version>20210307</json-version>
-        <contentstack-utility-version>1.1.0</contentstack-utility-version>
+        <contentstack-utils-version>1.1.0</contentstack-utils-version>
     </properties>
 
     <parent>
@@ -103,11 +103,11 @@
 
 
     <dependencies>
-        <dependency>
-            <groupId>com.contentstack.sdk</groupId>
-            <artifactId>utils</artifactId>
-            <version>${contentstack-utility-version}</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.contentstack.sdk</groupId>-->
+<!--            <artifactId>utils</artifactId>-->
+<!--            <version>${contentstack-utils-version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
